cabal-version: 3.0
name: unboxed
version: 0.2
synopsis: unboxed classes
description: unboxed classes.
homepage: https://github.com/ekmett/haskell
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2021 Edward Kmett
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md
tested-with:
  GHC == 8.10.3

source-repository head
  type: git
  location: https://github.com/ekmett/unboxed

flag level2
  default: False
  manual: True
  description: construct reps for binary tuples and sums

common minimal
  default-language: Haskell2010
  ghc-options: -XGHC2021

common base
  import: minimal
  build-depends:
    base >= 4.15 && < 5,
    ghc-bignum,
    ghc-prim

  -- enable warnings
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wprepositive-qualified-module

  -- disable warnings
  ghc-options:
    -Wno-simplifiable-class-constraints -Wno-orphans

library bug
  import: base
  hs-source-dirs: bug
  exposed-modules: Bug
  build-depends: base, ghc-prim, unboxed, internal

library internal
  import: base
  hs-source-dirs: internal
  build-depends: base
  exposed-modules:
    Unboxed.Internal.Levitation
    Unboxed.Internal.Class
    Unboxed.Internal.Combinators
    Unboxed.Internal.List
    Unboxed.Internal.Maybe
    Unboxed.Internal.Rebind
    Unboxed.Internal.Syntax

    AddrRep DoubleRep FloatRep
    IntRep Int8Rep Int16Rep Int32Rep Int64Rep
    LiftedRep UnliftedRep
    TupleRep
    WordRep Word8Rep Word16Rep Word32Rep Word64Rep

    NilReps

-- DEFaults and DEFinitions
library def
  import: base
  build-depends: internal
  hs-source-dirs: def
  signatures: Rep
  exposed-modules: Def

library consreps
  import: base
  hs-source-dirs: consreps
  signatures: H T
  exposed-modules: ConsReps Tuple Sum

library consdef
  import: minimal
  build-depends: consreps, def
  mixins:
    def (Def as Def.Tuple) requires (Rep as Tuple),
    def (Def as Def.Sum) requires (Rep as Sum)
  -- signatures: H T
  reexported-modules:
    Def.Tuple,
    Def.Sum,
    ConsReps as Def.Cons

library
  import: base
  build-depends: consdef, internal
  hs-source-dirs: src
  exposed-modules:
    Unboxed.Natural
    Unboxed.Rep.Int
    Unboxed.Rep.Word

library measurement
  import: base
  ghc-options: -O2
  build-depends: gauge
  hs-source-dirs: measurement
  exposed-modules: Whnf Internal
